# Master-Thesis

./: .gitignore  README.md  X_values.xlsx  charline21_simulation_results.csv  charline2_simulation_results.csv  charline_simulation2_results.csv  charmap_simulation_results.csv  charmap_simulation_results1.csv  charmap_simulation_results2.csv  charmap_simulation_results3.csv  charmap_simulation_results4.csv  charmap_simulation_results5.csv  charmap_simulation_results6.csv  charmap_simulation_results6_count.csv  charmap_simulation_results6_count2.csv  charmap_simulation_results6_extrapolate.csv  charmap_simulation_results6_full.csv  charmap_simulation_results6_test.csv  charmap_simulation_results6_test_slope.csv  charmap_simulation_results7_full.csv  charmap_simulation_results8.csv  charmap_simulation_results8_igva.csv  charmap_simulation_results8_test.csv  charmap_simulation_results9.csv  charmap_simulation_results_3b.csv  charmap_simulation_results_RMSE (2).csv  charmap_simulation_results_RMSE.csv  charmap_simulation_results_commony.csv  charmap_simulation_results_count3.csv  charmap_simulation_results_count4.csv  charmap_simulation_results_count5.csv  charmap_simulation_results_count6.csv  charmap_simulation_results_distorted.csv  charmap_simulation_results_etapr.csv  charmap_simulation_results_evap.csv  charmap_simulation_results_reverse.csv  charmap_simulation_results_reverse_igva.csv  charmap_simulation_results_reverse_nodefault.csv  charmap_simulation_results_scaled.csv  charmap_simulation_results_scaled_full.csv  (+32 more)
charline/: char_lines.json
charmaps/: char_maps.json  (+1 more)
(+130 files in other folders)
