[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heatpump-tespy-calibration"
version = "0.1.0"
description = "Simulation and calibration of a large-scale heat pump using TESPy and measurement data"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ronit Datta" }
]

dependencies = [
    "tespy",
    "CoolProp>=6.8",
    "fluprodia>=4.1.2",
    "matplotlib>=3.2.1",
    "numpy",
    "pandas>=1.3.0",
    "scipy",
    "scikit-learn",
    "openpyxl",
    "plotly"
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "pytest",
    "black",
    "ruff"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88